P2Pmsgcore/native/P2Pmsgcore_c.h

typedef void* P2PeerConWsaHandle;
P2PC_API void               p2peerconwsa_destroy          (P2PeerConWsaHandle h);
P2PC_API int                p2peerconwsa_connect          (P2PeerConWsaHandle h);
P2PC_API int                p2peerconwsa_listen           (P2PeerConWsaHandle h);
P2PC_API void               p2peerconwsa_close            (P2PeerConWsaHandle h);
P2PC_API unsigned long      p2peerconwsa_get_state        (P2PeerConWsaHandle h, unsigned long mask);
P2PC_API int                p2peerconwsa_has_state        (P2PeerConWsaHandle h, unsigned long mask);
// Returns P2PeerConMode_e: 0=Unknown,1=CLIENT,2=SERVICE,3=Accept
P2PC_API int                p2peerconwsa_get_mode         (P2PeerConWsaHandle h);
P2PC_API const wchar_t*     p2peerconwsa_get_address      (P2PeerConWsaHandle h);