P2Pmsgcore/java/src/main/java/com/p2pmsgcore/native_/P2Pmsgcore_c.java


    /**
     * {@snippet lang=c :
     * void p2peerconwsa_destroy(P2PeerConWsaHandle h)
     * }
     */
    public static void p2peerconwsa_destroy(MemorySegment h) {
        var mh$ = p2peerconwsa_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_destroy", h);
            }
            mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_connect {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_connect").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peerconwsa_connect(P2PeerConWsaHandle h)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_connect$descriptor() {
        return p2peerconwsa_connect.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peerconwsa_connect(P2PeerConWsaHandle h)
     * }
     */
    public static MethodHandle p2peerconwsa_connect$handle() {
        return p2peerconwsa_connect.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peerconwsa_connect(P2PeerConWsaHandle h)
     * }
     */
    public static MemorySegment p2peerconwsa_connect$address() {
        return p2peerconwsa_connect.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peerconwsa_connect(P2PeerConWsaHandle h)
     * }
     */
    public static int p2peerconwsa_connect(MemorySegment h) {
        var mh$ = p2peerconwsa_connect.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_connect", h);
            }
            return (int)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_listen {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_listen").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peerconwsa_listen(P2PeerConWsaHandle h)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_listen$descriptor() {
        return p2peerconwsa_listen.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peerconwsa_listen(P2PeerConWsaHandle h)
     * }
     */
    public static MethodHandle p2peerconwsa_listen$handle() {
        return p2peerconwsa_listen.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peerconwsa_listen(P2PeerConWsaHandle h)
     * }
     */
    public static MemorySegment p2peerconwsa_listen$address() {
        return p2peerconwsa_listen.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peerconwsa_listen(P2PeerConWsaHandle h)
     * }
     */
    public static int p2peerconwsa_listen(MemorySegment h) {
        var mh$ = p2peerconwsa_listen.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_listen", h);
            }
            return (int)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_close").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peerconwsa_close(P2PeerConWsaHandle h)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_close$descriptor() {
        return p2peerconwsa_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peerconwsa_close(P2PeerConWsaHandle h)
     * }
     */
    public static MethodHandle p2peerconwsa_close$handle() {
        return p2peerconwsa_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peerconwsa_close(P2PeerConWsaHandle h)
     * }
     */
    public static MemorySegment p2peerconwsa_close$address() {
        return p2peerconwsa_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2peerconwsa_close(P2PeerConWsaHandle h)
     * }
     */
    public static void p2peerconwsa_close(MemorySegment h) {
        var mh$ = p2peerconwsa_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_close", h);
            }
            mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_get_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_LONG,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_get_state").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned long p2peerconwsa_get_state(P2PeerConWsaHandle h, unsigned long mask)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_get_state$descriptor() {
        return p2peerconwsa_get_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned long p2peerconwsa_get_state(P2PeerConWsaHandle h, unsigned long mask)
     * }
     */
    public static MethodHandle p2peerconwsa_get_state$handle() {
        return p2peerconwsa_get_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned long p2peerconwsa_get_state(P2PeerConWsaHandle h, unsigned long mask)
     * }
     */
    public static MemorySegment p2peerconwsa_get_state$address() {
        return p2peerconwsa_get_state.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned long p2peerconwsa_get_state(P2PeerConWsaHandle h, unsigned long mask)
     * }
     */
    public static int p2peerconwsa_get_state(MemorySegment h, int mask) {
        var mh$ = p2peerconwsa_get_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_get_state", h, mask);
            }
            return (int)mh$.invokeExact(h, mask);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_has_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_has_state").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peerconwsa_has_state(P2PeerConWsaHandle h, unsigned long mask)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_has_state$descriptor() {
        return p2peerconwsa_has_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peerconwsa_has_state(P2PeerConWsaHandle h, unsigned long mask)
     * }
     */
    public static MethodHandle p2peerconwsa_has_state$handle() {
        return p2peerconwsa_has_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peerconwsa_has_state(P2PeerConWsaHandle h, unsigned long mask)
     * }
     */
    public static MemorySegment p2peerconwsa_has_state$address() {
        return p2peerconwsa_has_state.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peerconwsa_has_state(P2PeerConWsaHandle h, unsigned long mask)
     * }
     */
    public static int p2peerconwsa_has_state(MemorySegment h, int mask) {
        var mh$ = p2peerconwsa_has_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_has_state", h, mask);
            }
            return (int)mh$.invokeExact(h, mask);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_get_mode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_get_mode").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peerconwsa_get_mode(P2PeerConWsaHandle h)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_get_mode$descriptor() {
        return p2peerconwsa_get_mode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peerconwsa_get_mode(P2PeerConWsaHandle h)
     * }
     */
    public static MethodHandle p2peerconwsa_get_mode$handle() {
        return p2peerconwsa_get_mode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peerconwsa_get_mode(P2PeerConWsaHandle h)
     * }
     */
    public static MemorySegment p2peerconwsa_get_mode$address() {
        return p2peerconwsa_get_mode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peerconwsa_get_mode(P2PeerConWsaHandle h)
     * }
     */
    public static int p2peerconwsa_get_mode(MemorySegment h) {
        var mh$ = p2peerconwsa_get_mode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_get_mode", h);
            }
            return (int)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_get_address {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_get_address").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const wchar_t *p2peerconwsa_get_address(P2PeerConWsaHandle h)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_get_address$descriptor() {
        return p2peerconwsa_get_address.DESC;
    }
